<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:title="@string/label_tarefa"
        app:navigationIcon="@drawable/ic_navigate"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

<!--    transformado em match constraint "0dp"-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_titulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_titulo"
        app:layout_constraintStart_toStartOf="@id/guide_inicio"
        app:layout_constraintEnd_toEndOf="@id/guide_fim"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_data"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_data"
        android:layout_marginEnd="8dp"
        app:startIconDrawable="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/til_titulo"
        app:layout_constraintStart_toStartOf="@id/guide_inicio"
        app:layout_constraintEnd_toStartOf="@+id/til_hora">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="none"
            android:focusable="false"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_timer"
        android:hint="@string/label_hora"
        app:layout_constraintTop_toTopOf="@id/til_data"
        app:layout_constraintEnd_toEndOf="@id/guide_fim"
        app:layout_constraintStart_toEndOf="@id/til_data">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tarefa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_tarefa"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="@id/guide_inicio"
        app:layout_constraintEnd_toEndOf="@id/guide_fim"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancelar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_cancelar"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/guide_inicio"
        app:layout_constraintEnd_toEndOf="@id/guide_fim"
        app:layout_constraintBottom_toTopOf="@+id/btn_tarefa"/>

</androidx.constraintlayout.widget.ConstraintLayout>



<!--data-->
    <!--        app:layout_constraintEnd_toEndOf="@id/guide_fim"-->
    <!--        app:layout_constraintStart_toStartOf="@id/guide_inicio"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/til_titulo" >-->

<!-- hora -->
    <!--        app:layout_constraintEnd_toEndOf="@id/guide_fim"-->
    <!--        app:layout_constraintStart_toStartOf="@id/guide_inicio"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/til_data">-->